[project]
name = "uqadm"
version = "2026.20.0"
description = "Unique admin CLI (space list, export, upsert, migrate, delete): separate from unique-cli"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "unique-sdk>=2026.20.0.dev8",
    "click>=8.1.0,<9",
    "python-dotenv>=1.0.0,<2",
    "pyyaml>=6.0.1,<7",
    "rich>=13.3.5",
]

[project.scripts]
uqadm = "uqadm.cli:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "recommended"
include = ["uqadm"]
exclude = ["**/tests/**", "**/test_*.py"]

# Any-cascade: all triggered by untyped third-party code (click, unique-sdk);
# fixing requires sprinkling `Any` everywhere which defeats the purpose.
reportAny = "none"
reportExplicitAny = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"

# basedpyright-only: mixin/base-class patterns make per-attribute annotations impractical.
reportUnannotatedClassAttribute = "none"

# Third-party libraries that ship no type stubs.
reportMissingTypeStubs = "none"

# Style preferences.
reportImplicitStringConcatenation = "none"

# CLI tools intentionally discard many return values.
reportUnusedCallResult = "none"
reportUnusedFunction = "none"

# uqadm accesses SDK-internal symbols.
reportPrivateUsage = "none"
reportPrivateLocalImportUsage = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
