[project]
name = "uqadm"
version = "2026.20.0"
description = "Unique admin CLI (space list, export, upsert, migrate, delete): separate from unique-cli"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "unique-sdk>=2026.20.0.dev8",
    "typer>=0.12,<1",
    "python-dotenv>=1.0.0,<2",
    "pyyaml>=6.0,<7",
    "rich>=13.3.5",
    "tomli-w>=1.0,<2",
]

[project.scripts]
uqadm = "uqadm.cli:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=uqadm --cov-report=term-missing"