[project]
name = "unique_quartr"
version = "0.2.7"
description = "Unique Quartr API client"
authors = [
    { name = "Rami Azouz", email = "rami.ext@unique.ch" },
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12,<4"
dependencies = [
    "unique-toolkit>=1.50.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.10.1",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "deptry>=0.24.0",
    "basedpyright>=1.35.0",
    "poethepoet>=0.32.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
constraint-dependencies = ["lxml>=5.0.0"]

[tool.uv.sources]
unique-toolkit = { path = "../../unique_toolkit", editable = true }

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_quartr --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_quartr", "unique_toolkit"]
extend_exclude = ["tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-toolkit"]
DEP003 = ["unique_toolkit"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_quartr"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
