[project]
name = "unique-search-proxy"
version = "0.2.0"
description = "Web Search Proxy implementation"
authors = [{ name = "ThePhilAz", email = "rami.azouz@philico.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "google-cloud-aiplatform>=1.128.0,<2.0.0",
    "google-auth>=2.43.0,<3.0.0",
    "google-generativeai>=0.8.5,<0.9.0",
    "pydantic>=2.12.5,<3.0.0",
    "httpx>=0.28.0,<0.29.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "pydantic-settings>=2.12.0,<3.0.0"
]

[dependency-groups]
dev = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.uv]
exclude-newer = "2 weeks"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_search_proxy"]

[tool.deptry]
known_first_party = ["unique_search_proxy"]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "ai: AI-authored or AI-generated tests",
    "asyncio: asyncio tests",
    "integration: integration tests that require API access or credentials",
    "serial: tests that must run serially",
    "unit: unit tests",
    "verified: AI-generated tests with human verification",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

