[tool.poetry]
name = "metadata-extractor"
version = "0.1.0"
description = ""
authors = ["Martin Fadler <martin.fadler@unique.ai>"]
readme = "README.md"
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
unique-sdk = "^0.9.4"
gunicorn = "^23.0.0"
unique-toolkit = "^0.6.8"
pydantic-settings = "^2.8.1"
sseclient = "^0.0.27"
backoff = "^2.2.1"
quart = "^0.20.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src:app.run"