[tool.poetry]
name = "unique_follow_up_questions"
version = "1.1.2"
description = ""
authors = [
    "Martin Fadler <martin.fadler@unique.ch>",
    "Sadique Sheik <sadique@unique.ch>",
    "Fabian Schläpfer <fabian@unique.ch>",
    "Pascal Hauri <pascal@unique.ch>",
]
readme = ["README.md", "CHANGELOG.md"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.12"
typing-extensions = "^4.9.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.0.1"
pytest = "^8.4.1"
jinja2 = "^3.1.6"
pillow = "^10.4.0"
unique-sdk = "^0.10.0"
unique-toolkit = "^1.7.0"


[tool.poetry.group.dev.dependencies]
python = "^3.12"
typing-extensions = "^4.9.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.0.1"
pytest = "^8.4.1"
jinja2 = "^3.1.6"
pillow = "^10.4.0"
unique-sdk = { path = "../../unique_sdk" }
unique-toolkit = { path = "../../unique_toolkit" }
ruff = "^0.12.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
