[tool.poetry]
name = "unique_follow_up_questions"
version = "1.1.11"
description = ""
authors = [
    "Martin Fadler <martin.fadler@unique.ch>",
    "Sadique Sheik <sadique@unique.ch>",
    "Fabian Schläpfer <fabian@unique.ch>",
    "Pascal Hauri <pascal@unique.ch>",
]
readme = ["README.md", "CHANGELOG.md"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
jinja2 = "^3.1.6"
unique-toolkit = "^1.38.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.25.0"
pytest-cov = "^7.0.0"
deptry = "^0.24.0"
unique-sdk = { path = "../../unique_sdk" }
unique-toolkit = { path = "../../unique_toolkit" }
ruff = "^0.12.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
known_first_party = ["unique_follow_up_questions"]
extend_exclude = ["unique_follow_up_questions/tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
