[project]
name = "unique_follow_up_questions"
version = "1.1.16"
description = ""
authors = [
    { name = "Martin Fadler", email = "martin.fadler@unique.ch" },
    { name = "Sadique Sheik", email = "sadique@unique.ch" },
    { name = "Fabian Schläpfer", email = "fabian@unique.ch" },
    { name = "Pascal Hauri", email = "pascal@unique.ch" },
]
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic>=2.8.2",
    "jinja2>=3.1.6",
    "unique-toolkit>=1.50.4",
]

[dependency-groups]
dev = [
    "unique-sdk",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
exclude-newer = "2 weeks"
constraint-dependencies = ["lxml>=5.0.0"]

[tool.uv.exclude-newer-package]
"unique-sdk" = false
"unique-toolkit" = false

[tool.uv.sources]
unique-sdk = { workspace = true }
unique-toolkit = { workspace = true }

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_follow_up_questions --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_follow_up_questions"]
extend_exclude = ["unique_follow_up_questions/tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-toolkit"]
DEP003 = ["unique_toolkit"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_follow_up_questions"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

